# fedimint-observer

./: .gitignore  .typos.toml  404.html  CLAUDE.md  CNAME  COLOR_PALETTE.md  Cargo.toml  MIGRATION_PROGRESS.md  README.md  docker-compose.yml  flake.nix  index.html  justfile  justfile.fmo.just  sample.env  tailwind.config.js
.github/workflows/: ci.yml  flakebox-ci.yml  flakebox-flakehub-publish.yml  ghcr-publish.yml  preview.yml  react-frontend-ci.yml
assets/: MiniChart-BL_Jh_u8.js  MiniChart-BgaUHC95.js  MiniChart-BjvNgk86.js  MiniChart-CJQdcSqS.js  MiniChart-CPMWW6T9.js  MiniChart-CmZkUa1i.js  MiniChart-DNjNF1_J.js  MiniChart-DjOwsa4d.js  MiniChart-DnzUAsyh.js  MiniChart-DzVYQw9T.js  MiniChart-OfGYy0qR.js  MiniChart-cLBkvljd.js  MiniChart-kDcP15xA.js  MiniChart-nfXPR7T6.js  TransactionChart-BCKoZ-95.js  TransactionChart-BRTyY9Ys.js  TransactionChart-BT2jfYpv.js  TransactionChart-Bu1OtVkb.js  TransactionChart-CZpww-Ie.js  TransactionChart-CcfY74Ds.js  TransactionChart-ChncnMx4.js  TransactionChart-CiCEXqTl.js  TransactionChart-CrmvEQfI.js  TransactionChart-Cvrrsp4W.js  TransactionChart-DmU5Pxw-.js  TransactionChart-DtgPEqCN.js  TransactionChart-Dx2Ja7d1.js  TransactionChart-HAtQ7Hce.js  TransactionChart-nRsVA-nX.js  TransactionChart-w02BPlaF.js  index-3UEU9fL2.js  index-B8zwxQaN.js  index-BFbgQ8DG.css  index-BIBcemAp.js  index-BM62Rv_a.js  index-BNsQm6dT.css  index-BWbsymng.js  index-Bd9zEMFy.js  index-Bdp1ICO7.css  index-C-EKVfAA.js  (+28 more)
fmo_api_types/: Cargo.toml
fmo_api_types/src/: lib.rs
fmo_frontend/: Cargo.toml  index.html  package.json  tailwind.config.js
fmo_frontend/src/: lib.rs  main.rs  util.rs
fmo_frontend/src/components/: alert.rs  badge.rs  button.rs  copyable.rs  mod.rs  navbar.rs  tabs.rs
fmo_frontend/src/components/federation/: activity.rs  chart.rs  general.rs  guardians.rs  mod.rs  nostr_vote.rs  stars_selector.rs  stars_seletor.rs  utxos.rs
fmo_frontend/src/components/federations/: check_federation.rs  federation_row.rs  mod.rs  nostr_federation_row.rs  rating.rs  totals.rs
fmo_frontend/src/components/nostr/: check_federation.rs  mod.rs  nostr_federation_row.rs
fmo_frontend_react/: COLOR_PALETTE.md  index.html  package-lock.json  package.json  tailwind.config.js
fmo_frontend_react/src/: App.tsx  index.css  main.tsx
fmo_frontend_react/src/components/: Alert.tsx  Badge.tsx  Button.tsx  Copyable.tsx  FederationRow.tsx  GatewayWarningPage.tsx  MiniChart.tsx  NavBar.tsx  Rating.tsx  Tabs.tsx  Totals.tsx  TransactionChart.tsx
fmo_frontend_react/src/hooks/: useTheme.ts  useTheme.tsx
fmo_frontend_react/src/pages/: FederationDetail.tsx  FederationGateways.tsx  Home.tsx  Nostr.tsx
fmo_frontend_react/src/services/: api.ts
fmo_frontend_react/src/types/: api.ts
fmo_frontend_react/src/utils/: format.ts
fmo_server/: Cargo.toml
fmo_server/schema/: block_times.sql  v0.sql  v1.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql  v8.sql  v9.sql
fmo_server/src/: db.rs  main.rs  meta.rs  util.rs
fmo_server/src/config/: id.rs  meta.rs  mod.rs  modules.rs
fmo_server/src/federation/: db.rs  gateways.rs  guardians.rs  meta.rs  mod.rs  nostr.rs  observer.rs  session.rs  transaction.rs
frontend/: Cargo.toml  index.html  package.json  tailwind.config.js
frontend/src/: lib.rs  main.rs  util.rs
frontend/src/components/: copyable.rs  mod.rs  navbar.rs
frontend/src/components/federation/: activity.rs  general.rs  guardians.rs  mod.rs
frontend/src/components/federations/: federation_row.rs  mod.rs
schema/: v0.postgres.sql  v0.sql
scripts/: migrate_sqlite_to_postgres.sh
scripts/pg_dev/: backup.sh  env.sh  restore.sh  start.sh  stop.sh
src/: config.rs  error.rs  main.rs  meta.rs  util.rs
src/config/: meta.rs  mod.rs  modules.rs
src/federation/: db.rs  mod.rs  observer.rs  query.html  query.rs  session.rs  transaction.rs
