[workspace]
members = [
    "fmo_api_types",
    "fmo_frontend",
    "fmo_server",
]

resolver = "2"

[workspace.dependencies]
fedimint-api-client = { version = "0.7", git = "https://github.com/elsirion/fedimint", branch = "v0.7.2-patch-xyz" }
fedimint-core = { version = "0.7", git = "https://github.com/elsirion/fedimint", branch = "v0.7.2-patch-xyz" }
fedimint-ln-common = { version = "0.7", git = "https://github.com/elsirion/fedimint", branch = "v0.7.2-patch-xyz" }
fedimint-mint-common = { version = "0.7", git = "https://github.com/elsirion/fedimint", branch = "v0.7.2-patch-xyz" }
fedimint-wallet-common = { version = "0.7", git = "https://github.com/elsirion/fedimint", branch = "v0.7.2-patch-xyz" }
