[workspace]
members = [
    "fmo_api_types",
    "fmo_server",
]

resolver = "2"

[workspace.dependencies]
fedimint-api-client = { version = "0.10.0", git = "https://github.com/fedimint/fedimint", tag = "v0.10.0" }
fedimint-connectors = { version = "0.10.0", git = "https://github.com/fedimint/fedimint", tag = "v0.10.0" }
fedimint-core = { version = "0.10.0", git = "https://github.com/fedimint/fedimint", tag = "v0.10.0" }
fedimint-ln-common = { version = "0.10.0", git = "https://github.com/fedimint/fedimint", tag = "v0.10.0" }
fedimint-meta-client = { version = "0.10.0", git = "https://github.com/fedimint/fedimint", tag = "v0.10.0" }
fedimint-mint-common = { version = "0.10.0", git = "https://github.com/fedimint/fedimint", tag = "v0.10.0" }
fedimint-wallet-common = { version = "0.10.0", git = "https://github.com/fedimint/fedimint", tag = "v0.10.0" }
