[package]
name = "fmo_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1"
fedimint-core = { workspace = true }
fmo_api_types = { path = "../fmo_api_types" }
futures = "0.3.30"
leptos = { version = "0.6", features = ["csr"] }
leptos-chartistry = { version = "0.1.8", git = "https://github.com/elsirion/leptos-chartistry", branch = "v0.1.8" }
leptos_meta = { version = "0.6.1", features = ["csr"] }
leptos_router = { version = "0.6.13", features = ["csr"] }
leptos-use = { version = "0.13" }
nostr-sdk = {version = "0.34.0", features = ["nip07"]}
num-format = "0.4.4"
reqwest = { version = "0.12.5", default-features = false, features = [ "json" ] }
serde_json = "1.0.122"
tokio = {version = "1.39.2", features = [ "io-util" ]}
tracing = "0.1.40"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.69", features = ["Navigator", "Clipboard"] }
itertools = "0.12.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
